==> Embedfire-gd32/ebf_gd32vf103_code/EBF_GD32VF103-Core-Board_Demo/GD32VF103V_EVAL_Demo_Suites/Projects/Synthetic_Test/Utilities/BSP/sdcard/bsp_spi_sdcard.c <==
#include "./sdcard/bsp_spi_sdcard.h"

static void GPIO_Configuration(void)
{
	spi_parameter_struct spi_init_struct;

  SD_SPI_Clock_FUN(SD_SPI_CLK);
  rcu_periph_clock_enable(RCU_GPIOB);

  /* 配置 CLK MOSI */
  gpio_init(SD_SPI_SCK_GPIO_PORT, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ, SD_SPI_SCK_PIN | SD_SPI_MOSI_PIN);    // 这里 CLK 与 MOSI 是同一个端口
  gpio_init(SD_SPI_MISO_GPIO_PORT, GPIO_MODE_IN_FLOATING, GPIO_OSPEED_50MHZ, SD_SPI_MISO_PIN);
  /* SPI0_CS GPIO pin configuration */
  gpio_init(SD_CS_GPIO_PORT, GPIO_MODE_OUT_PP, GPIO_OSPEED_50MHZ, SD_CS_PIN);

  /* chip select invalid*/
  SD_CS_HIGH();

  /* SPI0 parameter config */
  spi_init_struct.trans_mode           = SPI_TRANSMODE_FULLDUPLEX;
  spi_init_struct.device_mode          = SPI_MASTER;
  spi_init_struct.frame_size           = SPI_FRAMESIZE_8BIT;
  spi_init_struct.clock_polarity_phase = SPI_CK_PL_HIGH_PH_2EDGE;
  spi_init_struct.nss                  = SPI_NSS_SOFT;
  spi_init_struct.prescale             = SPI_PSC_4;
  spi_init_struct.endian               = SPI_ENDIAN_MSB;;
  spi_init(SD_SPI, &spi_init_struct);

  /* set crc polynomial */
  spi_crc_polynomial_set(SD_SPI, 7);
  /* enable SPI1 */
  spi_enable(SD_SPI);

}

uint8_t SD_WriteByte(uint8_t Data)
{
  /* loop while data register in not emplty */
    while (RESET == spi_i2s_flag_get(SD_SPI,SPI_FLAG_TBE));

    /* send byte through the SPI0 peripheral */
    spi_i2s_data_transmit(SD_SPI,Data);

    /* wait to receive a byte */
    while(RESET == spi_i2s_flag_get(SD_SPI,SPI_FLAG_RBNE));

    /* return the byte read from the SPI bus */
    return(spi_i2s_data_receive(SD_SPI));
}
